Add .env.example file for environment setup

--- a/Downloads/student_academic_performance/.gitignore
+++ b/Downloads/student_academic_performance/.gitignore
@@ -12,6 +12,9 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
+# Keep .env.example for reference
+!.env.example
+
 # Build outputs
 build/
 dist/
